--- a/styles/index.css
+++ b/styles/index.css
@@ -97,7 +97,7 @@ main {
 }
 
 .pop-up-window-hidden {
-  /* display: none; */
+  display: none; 
   font-size: 1.1em;
   transform: none;
 }
@@ -502,3 +502,4 @@ footer a {
     flex-direction: row;
   }
 }
+
