--- a/styles/index.css
+++ b/styles/index.css
@@ -137,6 +137,7 @@ main {
 }
 .get-involved-button {
   border: solid white 2px;
+  font-size: 0.8em;
 }
 
 .about-section {
@@ -502,5 +503,6 @@ footer a {
     flex-direction: row;
   }
 }
+
 
 
