--- a/styles/index.css
+++ b/styles/index.css
@@ -133,7 +133,7 @@ main {
 }
 .hero-button-section .button {
   min-width: 8em;
-  max-width: 9.5em
+  max-width: 9.5em;
   height: 2.5em;
 }
 .get-involved-button {
@@ -504,6 +504,7 @@ footer a {
     flex-direction: row;
   }
 }
+
 
 
 
