--- a/styles/index.css
+++ b/styles/index.css
@@ -176,8 +176,7 @@ main {
   flex-direction: column;
   margin-top: 4em;
   padding: 2em 0;
-  background-color: rgb(10, 0, 24);
-  color: white;
+  color: black;
   margin-bottom: 0;
 }
 .who-we-are-left,
@@ -205,9 +204,8 @@ main {
   flex-direction: column;
   margin: 0;
   padding: 3em 0;
-  background-color: rgb(10, 0, 24);
 
-  color: white;
+  color: black;
 }
 .mission-vision {
   display: flex;
@@ -234,10 +232,9 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(10, 0, 24);
 
   padding: 5em 0;
-  color: white;
+  color: black;
 }
 .what-class-needs-section .grid {
   display: grid;
