--- a/styles/index.css
+++ b/styles/index.css
@@ -27,8 +27,11 @@ nav {
   top: 0;
   left: 0;
   right: 0;
-  background-color: rgb(221, 221, 221);
+  background-color: rgb(10, 0, 24);
+  color: white;
   z-index: 20;
+  border-bottom: solid 2px white;
+  backdrop-filter: blur(5px);
 }
 
 .nav-right {
@@ -94,8 +97,8 @@ nav {
 
 main {
   background-color: rgb(10, 0, 24);
-  color: white;
-  font-size: 1.3em;
+  color: rgb(223, 220, 220);
+  font-size: 1.1em;
 }
 
 .pop-up-window-hidden {
@@ -183,6 +186,8 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  line-height: 1.5;
+  font-size: 1.1em;
 }
 .our-history {
   flex-direction: column;
@@ -234,9 +239,11 @@ main {
   gap: 3em;
   align-items: center;
   justify-content: center;
-  border: solid #1747bf 1.5px;
+  border: solid rgb(221, 218, 218) 1.5px;
   border-radius: 15px;
   max-height: 25em;
+  line-height: 1.2;
+  transition: all 0.3s ease-in-out;
 }
 .what-class-needs-section {
   display: flex;
@@ -245,6 +252,8 @@ main {
   justify-content: center;
   padding: 5em 0;
   color: white;
+  line-height: 1.5;
+  font-size: 1.1em;
 }
 .what-class-needs-section .grid {
   display: grid;
@@ -261,6 +270,11 @@ main {
   justify-content: center;
   align-items: center;
   max-width: 10em;
+  transition: all 0.3s ease-in-out;
+}
+.grid-item:hover,
+.mission-vision-card:hover {
+  transform: scale(1.2);
 }
 
 .about-section,
@@ -269,6 +283,7 @@ main {
 .what-class-needs-section {
   color: white;
   padding-top: 4em;
+  line-height: 1.5;
 }
 .grid-item img {
   width: 100%;
@@ -441,7 +456,7 @@ footer a {
   transition: transform 0.3s ease-in-out;
 }
 
-.home-link {
+.active-link {
   border-bottom: solid #e62d58 2.5px;
   padding-bottom: 0.4em;
 }
@@ -465,7 +480,7 @@ footer a {
   display: none;
 }
 
-.Copyright-text {
+.copyright-text {
   font-size: 0.8em;
 }
 .img-box {
@@ -564,6 +579,10 @@ footer a {
   .nav-links {
     display: flex;
     gap: 4em;
+  }
+  .nav-links a,
+  .nav-links p {
+    color: white;
   }
   .menu-button {
     display: none;
