--- a/styles/general-style.css
+++ b/styles/general-style.css
@@ -11,6 +11,11 @@ html,
 body {
   overflow-x: hidden;
 }
+body {
+  background-color: #edede1;
+  color: black;
+  font-size: 1.1em;
+}
 .color-gold {
   color: #d4af37;
   font-weight: 400;
@@ -27,7 +32,7 @@ nav {
   top: 0;
   left: 0;
   right: 0;
-  background-color: white;
+  background-color: #edede1;
   color: black;
   z-index: 20;
   backdrop-filter: blur(5px);
