changed the slider navigation buttons to wine red and removed the navigations on the photohighlights

--- a/styles/index.css
+++ b/styles/index.css
@@ -307,7 +307,7 @@
 }
 .swiper-button-prev,
 .swiper-button-next {
-  --swiper-navigation-color: white;
+  --swiper-navigation-color: #cb1b44;
 }
 .latest-projects-swiper .swiper-button-prev,
 .latest-projects-swiper .swiper-button-next,
